# Kine

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.cmake.in
examples/: CMakeLists.txt
examples/Crane3R/: Actuator.hpp  Angle.hpp  CMakeLists.txt  Crane3R.cpp  Crane3R.hpp  Regulator.hpp  main.cpp
examples/data/Crane3R/: crane3r.onnx  crane3r_model.onnx
examples/dnn/: CMakeLists.txt  data_gen.cpp  inverse_kinematics_model.pth  learn.py  net.py  requirements.txt  usage.py
include/kine/: Kine.hpp  KineComponent.hpp  KineLimit.hpp  KineLink.hpp
include/kine/ik/: CCDSolver.hpp  DLSSolver.hpp  DNNSolver.hpp  IKSolver.hpp
include/kine/joints/: KineJoint.hpp  PrismaticJoint.hpp  RevoluteJoint.hpp
include/kine/math/: Euler.hpp  MathUtils.hpp  Matrix4.hpp  Quaternion.hpp  Vector3.hpp
src/: CMakeLists.txt
src/kine/ik/: DNNSolver.cpp
src/kine/math/: Euler.cpp  MathUtils.cpp  Matrix4.cpp  Quaternion.cpp  Vector3.cpp
